[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "jedi>=0.19.2",
    "keras-hub>=0.22.2",
    "matplotlib>=3.10.5",
    "numpy>=1.26",
    "opencv-python>=4.11.0.86",
    "pylance>=0.38.0",
    "python-lsp-server>=1.13.1",
    "setuptools>=80.9.0",
    "tensorflow-rocm==2.16.2",
    "vit-keras>=0.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.uv]
override-dependencies = ["tensorflow; sys_platform == 'never'"]

[tool.uv.sources]
tensorflow-rocm = { index = "rocm" }

[[tool.uv.index]]
name = "rocm"
url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.3.4/"
format = "flat"
